--- a/Materias/2S2020/PED_CE342/Aulas/Panorama.tex
+++ b/Materias/2S2020/PED_CE342/Aulas/Panorama.tex
@@ -1,3 +1,4 @@
+% Created 2020-09-28 seg 18:16
 % Intended LaTeX compiler: pdflatex
 \documentclass[presentation]{beamer}
   \usepackage{csquotes}
@@ -14,13 +15,11 @@
 \end{frame}
 
 
-
-
 \section{Introdução}
-\label{sec:org09677a8}
+\label{sec:orgebb7be3}
 
-\begin{frame}[label={sec:orgfa047db}]{Estrutura de tópicos e convenções}
-Cada parte da aula terá a seguinte estrutura
+\begin{frame}[label={sec:orgea892ef}]{Estrutura de tópicos e convenções}
+A aula terá a seguinte estrutura
 
 \begin{itemize}
 \item Apresentação dos movimentos gerais
@@ -35,25 +34,17 @@ Cada parte da aula terá a seguinte estrutura
 \end{frame}
 
 \section{O cenário internacional, o setor externo e a herança maldita}
-\label{sec:orgab5bd38}
+\label{sec:org9ebeb44}
 
-\begin{frame}[label={sec:orgc896728}]{Panorama Internacional}
+\begin{frame}[label={sec:orged7c95f}]{Panorama Internacional}
 \begin{itemize}
 \item Crise Mexicana (1994/5)
 \item Brasileira (1998/9)
 \item Argentina (2001/2002)
 \end{itemize}
-
-Situações desiguais no momento de sua inserção na globalização financeira condicionaram as opções de política
-
-\begin{itemize}
-\item México na etapa inicial de processo de estabilização monetária e já havia adotado algumas reformas liberalizantes
-\item Argentina e Brasil enfrentavam contexto de estabilidade macroeconômica
-\end{itemize}
 \end{frame}
 
-
-\begin{frame}[label={sec:org86baf7b}]{Crescimento e desequilíbrios globais}
+\begin{frame}[label={sec:org8fcab17}]{Crescimento e desequilíbrios globais}
 Após fase conturbada de 1997/2002, a economia global consolida um arrajno dinâmico e desequiblibrado entre 2002/3 a 2007/8
 
 \alert{Engrenagem comercial com 3 elos}
@@ -64,23 +55,20 @@ Após fase conturbada de 1997/2002, a economia global consolida um arrajno dinâ
 \end{itemize}
 \item Estratégia trade-account nos países asiáticos
 \begin{itemize}
-\item Superávit comercial chines com os EUA
+\item Superávit comercial chinês com os EUA
 \end{itemize}
-\item Impactos nas comodities
+\item Impactos nas commodities
 \end{itemize}
 
 \alert{Superávits em conta corrente nos países emeergentes}
 \begin{itemize}
 \item Fluxos líquidos oficiais de Capital
-\item Diversificação internacional entre os ricos
-\item Fluxos brutos de capital
 \item Financiamento do déficit americano, conundrun nas taxas de juros
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orge8297c7}]{A Herança Maldita}
+\begin{frame}[label={sec:org905963f}]{A Herança Maldita}
 \begin{itemize}
-\item Regime de política econômica
 \item Instabilidade macroeconômica
 \begin{itemize}
 \item Baixo ritmo de crescimento
@@ -96,21 +84,39 @@ Após fase conturbada de 1997/2002, a economia global consolida um arrajno dinâ
 \end{frame}
 
 
-\section{Governo Lula I}
-\label{sec:orgc6f0ca3}
+\section{Governos Lula e suas fases}
+\label{sec:org255c49f}
 
-\begin{frame}[label={sec:orgdeb0797}]{Rumos Gerais}
+\begin{frame}[label={sec:orgfe8d9cb}]{Primeira Fase}
+Experimento desenvolvimentista junto de uma política macroeconômica conservadora:
 \begin{itemize}
-\item Retomada do crescimento
-\item Melhora da situação das contas externas
+\item Continuidade do tripé
+\item Visão teórica da \alert{política fiscal:} contração fiscal expansionista
+\item \alert{Estratégia de crescimento:} visão liberal predominante
 \begin{itemize}
-\item Desendividamento externo e crescimento das reservas
-\item Diminuição da dívida líquida com um aumento menos acentuado da dívida bruta
+\item reformas microeconômicas
+\item regras estáveis de gestão
+\item ampliar ajuste fiscal
 \end{itemize}
+\item Apreciação cambial
+\item Taxa de juros elevadas
+\end{itemize}
+
+\alert{Contexto de transição complexa:} desconfiança dos credores e pressões financeiras
+\end{frame}
+
+\begin{frame}[label={sec:orga7524e0}]{Segunda fase}
+\begin{itemize}
+\item Retomada do Estado como elemento condutor do Crescimento
+\item Desenho da política fiscal no centro de proposta do desenvolvimento
+\item Remontagem da capacidade de atuação dos atores públicos
+\item Não desmonta aparato regulatório do modelo anterior
+\item Investimento de apoio às atividades privadas
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org8242e3c}]{Fatores determinantes}
+
+\begin{frame}[label={sec:org3f22dd1}]{Fatores determinantes}
 \begin{itemize}
 \item Impulsos externos favoráveis
 \begin{itemize}
@@ -131,7 +137,7 @@ Após fase conturbada de 1997/2002, a economia global consolida um arrajno dinâ
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org07d9303}]{Outros resultados:}
+\begin{frame}[label={sec:org324a5e8}]{Alguns resultados}
 \begin{itemize}
 \item Queda da taxa de desemprego aberta
 \item Valorização real do salário mínimo
@@ -147,82 +153,64 @@ Após fase conturbada de 1997/2002, a economia global consolida um arrajno dinâ
 \end{frame}
 
 
-\begin{frame}[label={sec:orgce951aa}]{Política Econômica}
-De um lado, um experimento desenvolvimentista junto de uma política macroeconômica conservadora e oscilante:
-\begin{itemize}
-\item Início bastante ortodoxo
-\begin{itemize}
-\item Apreciação cambial
-\item Grandes superávitis primários
-\item Taxa de juros elevadas
-\end{itemize}
-\end{itemize}
 
-\alert{Contexto de transição complexa:} desconfiança dos credores e pressões financeiras
-\end{frame}
 
-\section{Governo Lula: Segunda Fase}
-\label{sec:orgf9e2a08}
+\section{(Des)Continuidades e dificuldades}
+\label{sec:org0a1a69a}
 
-\begin{frame}[label={sec:orgee045da}]{Traços gerais}
-\begin{itemize}
-\item Retomada do Estado como elemento condutor do Crescimento
-\item Conjunto de medidas a favor do Crescimento
-\item Desenho da política fiscal no centro de proposta do desenvolvimento
-\item Remontagem da capacidade de atuação dos atores públicos
-\item Não desmonta aparato regulatório do modelo anterior
-\item Investimento de apoio às atividades privadas
-\end{itemize}
-\end{frame}
+\begin{frame}[label={sec:org4252b8d}]{Continuidades}
+\begin{block}{Política cambial}
+Pouco mudou ao longo do tempo
 
-\begin{frame}[label={sec:org0158148}]{Política Cambial}
-Pouca mudança ao longo do tempo
 \begin{itemize}
-\item Valorização com reflexo na Inflação
-\begin{itemize}
-\item Aumenta poder de compra da população
+\item Valorização com reflexo na inflação
 \item Compras de divisas não evitou valorização
+\item Impacto sobre o setor industrial
+\end{itemize}
+\end{block}
+
+\begin{block}{Política monetária}
+Rígido regime de metas de inflação
+
 \begin{itemize}
-\item Desdolarização
+\item altos níveis de juros reais
+\item discussão sobre independência do Banco Central
+\item conflito com meta de taxa de juros "desenvolvimentista"
 \end{itemize}
+\end{block}
+
+\begin{block}{Política fiscal}
+Não foi alterado o regime fiscal definido na era FHC
+
+\begin{itemize}
+\item Lei de Responsabilidade Fiscal sem mudanças
+\item Não alterou mercado de dívida pública
 \end{itemize}
-\end{itemize}
+\end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org225a311}]{Política Monetária e Fiscal}
-Manutenção do regime de metas para a Inflação em seus moldes institucionais
-\begin{itemize}
-\item Altos níveis de juros reais
-\end{itemize}
-\begin{itemize}
-\item Independência operacional do Banco Central
-\item Lei de responsabilidade fiscal sem mudanças
-\end{itemize}
-\end{frame}
 
-\begin{frame}[label={sec:orgfd05a94}]{Descontinuidades em Relação ao Lula I}
+\begin{frame}[label={sec:org91e5804}]{Descontinuidades}
+Conjugação de políticas de incentivo à renda e ao mercado interno
+
 \begin{itemize}
-\item Conjugação de políticas de incentivo à renda e ao mercado interno
 \item Defesa da expansão da demanda como fator de impulso ao crescimento
 \begin{itemize}
-\item Programa de salário mínimo e gastos sociais
+\item Política deliberada de inserção social
 \item Expansão do crédito
-\item Incentivo ao mercado interno
-\item Apoio ao setor industrial
+\item \alert{Programa de Salário Mínimo}
 \end{itemize}
-\item Ações desenvolvimentistas (conceito de Dutra Fonseca)
+\item Ações desenvolvimentistas
 \begin{itemize}
-\item Estado (Planejamento)
-\item Nacionalismo (nação como unidade de referência)
-\item Indústria
+\item Políticas de incentivo ao investimento: PAC e PDP
+\item Gasto público como estratégia para elevar o crescimento
+\item Política de fortalecimento dos Bancos Públicos e das empresas estatais
 \end{itemize}
 \end{itemize}
 \end{frame}
 
-\section{Dificuldades ao fim do governo Lula e rumo ao Dilma I}
-\label{sec:org93d1b6e}
 
-\begin{frame}[label={sec:orga106616}]{Dificuldades}
+\begin{frame}[label={sec:org8cc027d}]{Dificuldades}
 \begin{itemize}
 \item Limites do crescimento com expansão da demanda de consumo via crédito e políticas sociais
 \item Retomada da taxa de investimento, mas nível baixo
@@ -232,5 +220,154 @@ Manutenção do regime de metas para a Inflação em seus moldes institucionais
 \end{itemize}
 \item Estrutura produtiva
 \end{itemize}
+\end{frame}
+
+\section{Governo(s?) Dilma}
+\label{sec:org9d884be}
+
+\begin{frame}[label={sec:org1950323}]{Os três tenores}
+\end{frame}
+
+\begin{frame}[label={sec:org86d2719}]{Medidas macroprudenciais}
+\alert{Medidas macroprudenciais:*} Redução do crescimento do crédito.
+
+\begin{itemize}
+\item Redução da taxa de crescimento da renda disponível real
+\item Aumento dos depósitos compulsórios
+\item Aumento do capital mínimo exigido dos bancos para empréstimos ao consumidor de prazos mais longos
+\item Aumento do percentual mínimo de pagamento de cartões de crédito
+\end{itemize}
+
+\alert{\alert{Implicações:}}
+
+\begin{itemize}
+\item Aumento do spread do crédito ao consumo final
+\item Diminuição dos prazos
+\item Elimina \alert{boom} de consumo
+\item Aumento da inadimplência
+\end{itemize}
+\end{frame}
+
+
+\begin{frame}[label={sec:org2d7b038}]{Desaceleração rudimentar I}
+\begin{center}
+\begin{tabular}{lll}
+\hline
+ & 2004-2010 & 2011-2014\\
+PIB & 4.4\% & 2.1\%\\
+Produção industrial & 3.6\% & -0.9\%\\
+Taxa de desemprego & 9.0\% & 5.4\%\\
+\hline
+\end{tabular}
+\end{center}
+
+\alert{Principal mudança:} do incentivo à demanda agregada ao incetivo ao investimento privado.
+\end{frame}
+
+\begin{frame}[label={sec:org17f9fa7}]{Desaceleração rudimentar II}
+\begin{table}[htbp]
+\caption{Consumo das famílias}
+\centering
+\begin{tabular}{lll}
+\hline
+ & 2004-2010 & 2011-2014\\
+Crédito para habitação & 21,5\% & 4,6\%\\
+Hipotecas & 20,1\% & 29,3\%\\
+Salário real (emprego formal) & 2,9\% & 2,9\%\\
+Renda disponível real das famílias & 5,3\% & 1,2\%\\
+\hline
+\end{tabular}
+\end{table}
+\end{frame}
+
+\begin{frame}[label={sec:org6a41466}]{Desaceleração rudimentar III}
+\begin{table}[htbp]
+\caption{Política fiscal}
+\centering
+\begin{tabular}{lll}
+ & 2004-2010 & 2011-2014\\
+Superávit primário/PIB & 3,2\% & 1,7\%\\
+Receitas do setor público & 7,2\% & 1,2\%\\
+Transferências públicas para as famílias & 5,6\% & 4,9\%\\
+Investimento das Empresas Estatais (Federal) & 16,3\% & -2,7\%\\
+Investimento Adm, Pública & 14,0\% & -1,0\%\\
+\end{tabular}
+\end{table}
+\end{frame}
+
+
+\begin{frame}[label={sec:org41550d0}]{Prêambulo para a ópera do fim do mundo}
+\href{./opera.jpg}{Brasil, o Golpe: A Ópera do fim do mundo - Flávio Tavares}
+\end{frame}
+
+\section{Idade das trevas}
+\label{sec:org7f7de19}
+
+\section{Dados}
+\label{sec:org0406469}
+
+\begin{frame}[label={sec:orge8af774}]{Índice EMBI Brasil (Fim de período)}
+\end{frame}
+
+\begin{frame}[label={sec:orgda8308b}]{O ciclo das commodities}
+\alert{Dado:} Índice de Commodities (CRB)
+\end{frame}
+
+\begin{frame}[label={sec:orgec1c9cb}]{O ciclo de liquidez internacional para países emergentes}
+\alert{Dado:} IIF (?)
+\end{frame}
+
+\begin{frame}[label={sec:org0827417}]{Evolução das reservas internacionais líquidas}
+\end{frame}
+
+\begin{frame}[label={sec:org2b46afb}]{PIB puxado pelo mercado doméstico}
+\alert{Dado:} Decomposição do crescimento (doméstico e exportações líquidas)
+\end{frame}
+
+\begin{frame}[label={sec:orge6e9835}]{Crescimento e o investimento induzido}
+\alert{Dado:} Decomposição do crescimento (Todos os componentes da demanda)
+\end{frame}
+
+
+\begin{frame}[label={sec:orgb7869df}]{Crédito total}
+\end{frame}
+
+\begin{frame}[label={sec:org96cb915}]{Emprego}
+\alert{Dado:} EVOLUÇÃO DO NÚMERO TOTAL DE EMPREGADOS COM VÍNCULO FORMAL  DE EMPREGO - MTE/RAAIS
+\end{frame}
+
+
+\begin{frame}[label={sec:org50cec5a}]{Evolução do salário mínimo real}
+\end{frame}
+
+\begin{frame}[label={sec:org965e855}]{Consumo das famílias}
+\end{frame}
+
+\begin{frame}[label={sec:orgca109c8}]{Investimento público em recuperação}
+\alert{Dado:} Taxa de investimento público (\%PIB)
+\end{frame}
+
+\begin{frame}[label={sec:org101e787}]{A evolução favorável da dívida pública}
+\alert{Dado:} Evolução da dívida bruta e líquida (\%PIB)
+\end{frame}
+
+\begin{frame}[label={sec:org640ec85}]{Superávit primário}
+\end{frame}
+
+\begin{frame}[label={sec:org67219f0}]{Relação dívida externa líquida}
+\end{frame}
+
+
+\begin{frame}[label={sec:org5c05320}]{Taxa de câmbio nominal}
+\end{frame}
+
+\begin{frame}[label={sec:org96ff818}]{Taxa de juros selic}
+\end{frame}
+
+\begin{frame}[label={sec:org2856375}]{Preços livres vs Administrados}
+\end{frame}
+
+\begin{frame}[label={sec:orgd3b30e0}]{Finalmente, inflação (ops, IPCA)}
+\alert{Dado:} IPCA, centro da meta e limites
 \end{frame}
 \end{document}
