--- a/Articles/SFC/Petrini_Teixeira_2020_SFC.tex
+++ b/Articles/SFC/Petrini_Teixeira_2020_SFC.tex
@@ -1,4 +1,4 @@
-% Created 2020-09-23 qua 18:24
+% Created 2020-09-27 dom 14:59
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -54,7 +54,7 @@ Therefore, this model introduces both housing and asset bubbles	on Sraffian supe
 
 
 \section{Introduction}
-\label{sec:orgfecad70}
+\label{sec:orge9753c9}
 \label{sec:introduction}
 
 Non-residential investment is the most scrutinized variable in demand-led growth models so that others expenditures play a secondary role \cite{brochier_macroeconomics_2017}.
@@ -91,7 +91,7 @@ Section \ref{sec:Conclusion} offers some concluding remarks while Appendix \ref{
 
 
 \section{Empirical Motivation}
-\label{sec:org6dbf9c6}
+\label{sec:org3a80217}
 \label{sec:empirical}
 
 A current trend among empirical research on demand-led growth is about the role of NCC autonomous expenditures.
@@ -184,7 +184,7 @@ On the following section, we investigate how demand-led growth theoretical liter
 
 
 \section{The absence of residential investment in demand-led growth models}
-\label{sec:org4f04f35}
+\label{sec:orge3b46e7}
 \label{sec:Review}
 Recently, there is an effort to include SSM in Post-Keynesian strands \cite{lavoie_post-keynesian_2015}.
 Some authors have explored the consequences of  different NCC autonomous expenditures through modifications in the canonical Kaleckian model \cites{allain_tackling_2015}{lavoie_convergence_2016}\footnote{This modifications in the canonical Kaleckian growth model are related to critiques regarding its non-convergence to normal utilization rate on the long-run \cites{dallery_conflicting_2011}{skott_theoretical_2012}{hein_harrodian_2012}.}.
@@ -225,10 +225,10 @@ which its growth rate is described by the already mentioned houses own interest 
 
 
 \section{A Sraffian supermultiplier SFC model with residential investment}
-\label{sec:org65226c1}
+\label{sec:org9c4611b}
 \label{sec:Model}
 \subsection{General equations}
-\label{sec:org77189c1}
+\label{sec:orgd8f0835}
 
 Our model is the most parsimonious as possible: a closed capitalist economy without government sector. Output (\(Y\)) is determined by  a fixed combination of a homogeneous labor (\(L\)) input with homogeneous fixed capacity creatin capital (\(K_f\)). 
 For simplicity, we put technological progress, depreciation and goods inflation aside so investment is presented in net terms and all variables --- except for houses --- are measured in real terms.
@@ -364,7 +364,7 @@ Change in loans     & &$+\Delta L_{k}$&&$+\Delta L_f$& &$-\Delta L$& 0\\
 
 
 \subsection{Firms}
-\label{sec:orgd3f387f}
+\label{sec:orgb96b74e}
 
 In order to produce, firms purchase capital goods (\(-I_f\) in capital account) and hire workers, whom total remuneration is the economy wage bill. 
 Their total profits (\(FT\)) are a residual between sales (\(Y\)) and total wages (\(W\)). 
@@ -423,7 +423,7 @@ where \(r_g\) and \(r_n\) denotes gross and net profit rate respectively.
 
 
 \subsection{Banks}
-\label{sec:org2225b9a}
+\label{sec:org9329620}
 
 As in most part of SFC literature, banks do not have an active role in our model.
 They create money as credit is demanded and just after they collect deposits \cite{le_bourva_money_1992}. 
@@ -461,10 +461,10 @@ $$
 \end{equation}
 
 \subsection{Households}
-\label{sec:orgc205a57}
+\label{sec:org52bea06}
 
 \subsubsection*{Workers}
-\label{sec:org2e0371a}
+\label{sec:org33954fd}
 As mentioned before, we assume that workers expend (\(C_w\)) what they earn (\(W\)). 
 For simplicity, we consider that wages are the only source of income workers' disposable income (\(YD_{w}\)) and do not have access to consumption loans, so worker' saving (\(S_{hw}\)) are null.
 Therefore, accordingly to our hypothesis, workers' do not hold both net financial and total wealth.
@@ -489,7 +489,7 @@ V_{w} = 0
 \end{equation}
 
 \subsubsection*{Capitalists}
-\label{sec:orgcf5d2be}
+\label{sec:org3d74198}
 This is the most complex institutional sector of our model. 
 We assume consumption (\(C_k\)) is fully-autonomous and financed by loans (\(L_{k}\)). 
 Disposable income (\(YD_k\)) is the sum of distributed profits and received interests on deposits, net of interests payments
@@ -597,11 +597,11 @@ In this section, we presented our fully-specified parsimonious model to represen
 
 
 \section{Short and long-run equilibria}
-\label{sec:org74057c3}
+\label{sec:org5b00c61}
 \label{sec:runs}
 In this Section, we show the implications residential investment inclusion into a SSM-SFC model. First, we present the short-run dynamics and then move to the fully-adjusted position (denoted by \(\star\)).
 \subsection{Short-run good market equilibrium}
-\label{sec:orgb498722}
+\label{sec:org8ded10b}
 \label{short}
 
 In our no-government closed economic system, real output (equation \ref{_Y}) is the sum of household consumption (equation \ref{ConsumoTotal}) and both types of investment (equation \ref{_It}). 
@@ -650,7 +650,7 @@ On the following subsection, analyze the fully-adjusted positions values and ste
 \textbf{Nota:} Não organizei bem o texto desta seção. Não tenho certeza se essa é a melhor ordem de apresentação das equações, mas acredito que isso seja rápido de corrigir.
 
 \subsection{Fully-adjusted position}
-\label{sec:orgd135636}
+\label{sec:org4bdf92e}
 \label{long}
 
 
@@ -728,7 +728,7 @@ However, it has permanent effects over capital stock composition as a result of 
 
 
 \section{Numerical Simulations}
-\label{sec:org5bfbfad}
+\label{sec:org6d9e358}
 \label{sec:Experiments}
 \label{sec:Experiments}
 
@@ -743,7 +743,7 @@ Since we use a SFC framework, first experiment assess if income distribution aff
 Real estate increase experiment is motivated by recent US experience (from 1992 to 2019) as discussed in Section \ref{sec:empirical} while the last one aims to evaluate indebtedness stability.
 Table \ref{tab:param} in Appendix \ref{append:Data} presents the parameters of simulation and Table \ref{ResumoChoques} compare each result to baseline.
 \subsection{Wage-share decrease}
-\label{sec:org5096a40}
+\label{sec:orgb005138}
 \label{sec:Exp1}
 
 A wage-share decrease has a temporary negative impact both in GDP level and capacity utilization rate due to changes on the supermultiplier (see Figure \ref{fig:results_1}).
@@ -770,7 +770,7 @@ Therefore, gross and net profit rate remains persistently close to each other (s
 \textbf{Nota:} Farei referência às equações stock/flow quando terminar esta seção
 
 \subsection{Real estate inflation}
-\label{sec:org5cbfe81}
+\label{sec:org3aed90d}
 \label{sec:Exp2}
 
 
@@ -798,7 +798,7 @@ also the utilization rate.
 In other words, both autonomous expenditures share on GDP --- higher supermultiplier --- and houses share on real assets (see Equation \ref{partial_pi}) decline as a result of the already described non-residential investment positive reaction.
 Finally, it worth noting that real estate increase also has permanent effects over real stock/flow ratios due to capital gains.
 \subsection{Interest rate increase}
-\label{sec:orgf5ef312}
+\label{sec:org81b893b}
 \label{sec:Exp3}
 
 A increase in benchmark interest rate  has a persistent effect on long-run growth rate since houses own interest rate increases as well\footnote{Since we assume null spread on both mortgage and loans interest rate, an increase on deposits interest rate also increases the other ones. As a consequence, banks' net financial wealth remains unchanged.}.
@@ -857,7 +857,7 @@ Therefore, we find a stable debt dynamics for both capitalists and firms (other 
 
 
 \subsection{Plugging real data}
-\label{sec:orga2ce323}
+\label{sec:orga14e907}
 
 
 Finally, we include houses own interest rate data into our model (see Figure \ref{fig:propria_investo}) proposed by \cite{teixeira_crescimento_2015} and evaluated under econometric scrutinity by \textcite{petrini_demanda_2019}.
@@ -885,7 +885,7 @@ In order to report this stylized fact, we argue that would be necessary to inclu
 
 
 \section{Concluding Remarks}
-\label{sec:org3a6e516}
+\label{sec:org35a26bc}
 \label{sec:Conclusion}
 This paper contributes to demand-led growth agenda, taking in consideration recent efforts of embedding it in a SFC framework.
 Our novelty is twofold: (i) inclusion of residential investment and (ii) determination of its growth rate by houses' own interest rate.
@@ -910,22 +910,22 @@ For example, future research could assess which institutional arrangements allow
 
 
 \section*{Acknowledgments}
-\label{sec:org0583542}
+\label{sec:orgbba6d29}
 \noindent We  are  grateful  to  Lídia  Brochier,  Carolina  Baltar,  Franklin  Serrano  for  discussions,  as  well  as  comments  by  the participants of Cecon/Unicamp and UFRJ Political Economy research seminars and the participants of XII AKB meeting, 20th FMM forum, and 46th EEA Annual Conference. Any remaining errors are, of course, our own.
 
 \section*{Disclosure statement}
-\label{sec:orgf9d28bb}
+\label{sec:org09469ea}
 No potential conflict of interest was reported by the authors.
 
 \section*{References}
-\label{sec:orgca311b0}
+\label{sec:orgc23cb62}
 \printbibliography[heading=none]
 
 
 \appendix
 
 \section{Analytical Solution}
-\label{sec:org73dbedb}
+\label{sec:org55cb47b}
 \label{append:Solution}
 
 
@@ -1022,7 +1022,7 @@ and mortgage to total capital stock ratio (\(m^{\star}\)):
 
 
 \section{Numerical Appendix}
-\label{sec:org35a4319}
+\label{sec:org7e1cb9c}
 \label{append:Data}
 
 \begin{table}[H]
