--- a/Readings/Panel.org
+++ b/Readings/Panel.org
@@ -1,8 +1,9 @@
+#+OPTIONS: num:nil
 #+TITLE: Panel readings
 #+AUTHOR: Gabriel Petrini
 #+ARCHIVE: %s_read::
 #+TODO: READ SKIM PARTIAL WAIT MAYBE | REF REPORT DONE ARCH
-#+PROPERTY: header-args:bibtex :tangle Mortgaging.bib :exports none
+#+PROPERTY: header-args:bibtex :tangle Panel.bib :exports none
 #+PROPERTY: COLUMNS %TYPE %PRIORITY %7TODO(Decision) %20ITEM(Title) %4YEAR %COUNTRY(ISO3) %8STATUS %4CITE
 #+PROPERTY: TYPE_ALL Theory Method Case Manual Other Thechnical Review Empirical
 #+PROPERTY: DECISION_ALL Read File Skip PartialRead
@@ -32,13 +33,476 @@
   :PROPERTIES:
   :UNNUMBERED: t
   :END:
-  
 
-#+BEGIN: columnview :maxlevel 2 :id global
+** Literature survey  
 
+#+BEGIN: columnview :maxlevel 3 :id global
+| TYPE       | PRIORITY | Decision | Title                                                                                                                              | YEAR | ISO3 | STATUS     | CITE |
+|------------+----------+----------+------------------------------------------------------------------------------------------------------------------------------------+------+------+------------+------|
+|            | B        |          | HTML headers                                                                                                                       |      |      |            |      |
+|            | A        |          | Survey                                                                                                                             |      |      |            |      |
+|            | B        |          | Literature survey                                                                                                                  |      |      |            |      |
+|            | B        |          | Hypothesis testing survey                                                                                                          |      |      |            |      |
+|            | A        |          | Books                                                                                                                              |      |      |            |      |
+| Manual     | A        | READ     | [[https://www.emerald.com/insight/publication/doi/10.1016/S0731-9053(2001)15][Baltagi - Nonstationary Panels, Panel Cointegration, and Dynamic Panels: Volume 15]]                                                 | 2000 |      | Downloaded | Yes  |
+| Review     | A        | SKIM     | [[https://www.emerald.com/insight/content/doi/10.1016/S0731-9053(00)15002-9/full/html][Baltagi and Kao - Nonstationary panels, cointegration in panels and dynamic panels: A survey]]                                       | 2000 |      | Downloaded | Yes  |
+| Thechnical | C        | MAYBE    | [[https://www.emerald.com/insight/content/doi/10.1016/S0731-9053(00)15003-0/full/html][Blundel et al - Estimation in dynamic panel data models: Improving on the performance of the standard GMM estimator]]                | 2000 |      | Downloaded | Wait |
+| Thechnical | A        | WAIT     | [[https://www.emerald.com/insight/content/doi/10.1016/S0731-9053(00)15004-2/full/html][Pedroni - Fully modified OLS for heterogeneous cointegrated panels]]                                                                 | 2001 |      | Filed      | Yes  |
+| Thechnical | B        | SKIM     | [[https://www.emerald.com/insight/content/doi/10.1016/S0731-9053(00)15007-8/full/html][Kao and Chiang - On the estimation and inference of a cointegrated regression in panel data]]                                        | 2001 |      | Filed      | Wait |
+| Case       | A        | READ     | [[https://www.emerald.com/insight/content/doi/10.1016/S0731-9053(00)15008-X/full/html][Murray and Papell - Testing for unit roots in panels in the presence of structural change with an application to OECD unemployment]] | 2001 |      | Filed      | Wait |
+| Thechnical | B        | SKIM     | [[https://www.emerald.com/insight/content/doi/10.1016/S0731-9053(00)15010-8/full/html][Yin and Wu - Stationarity tests in heterogeneous panels]]                                                                            | 2001 |      | Filed      | Yes  |
+|            | A        | READ     | [[https://link.springer.com/book/10.1007/978-3-540-75892-1][Mátyás and Sevestre - The Econometrics of Panel Data: Vol 46]]                                                                       |      |      |            |      |
+| Thechnical | A        | READ     | [[https://link.springer.com/chapter/10.1007/978-3-540-75892-1_9][Breitung and Pesaran - Unit Roots and Cointegration in Panels]]                                                                      | 2008 |      | Filed      | Yes  |
+| Thechnical | A        | READ     | [[https://link.springer.com/chapter/10.1007/978-3-540-75892-1_2][Balestra and Krishnakumar - Fixed Effects Models and Fixed Coefficients Models]]                                                     | 2008 |      | Downloaded | Yes  |
+|            | A        | READ     | [[https://link.springer.com/book/10.1007/978-3-540-75892-1][Baltagi and Bresson - The Econometrics of multi-dimensional Panels: Vol 50]]                                                         |      |      |            |      |
+| Thechnical | A        | SKIM     | [[https://link.springer.com/chapter/10.1007/978-3-319-60783-2_2][Balazsi, Baltagi, Matyas and Pus -  Random Effects Models]]                                                                          | 2017 |      | Filed      | Yes  |
+| Thechnical | A        | SKIM     | [[https://link.springer.com/chapter/10.1007/978-3-319-60783-2_1][Balazsi, Laszlo and Wansbeek - Fixed Effects Models]]                                                                                | 2017 |      | Filed      | Yes  |
+| Case       | A        | READ     | [[https://link.springer.com/chapter/10.1007/978-3-319-60783-2_12][Baltagi and Bresson - Modelling Housing Using Multi-dimensional Panel Data]]                                                         | 2017 |      | Filed      | Yes  |
+|            | A        |          | Best practices                                                                                                                     |      |      |            |      |
+| Review     | B        | READ     | [[https://www.jstor.org/stable/2082979?seq=1][Beck and Katz - What to do (and not to do) with Time-Series Cross-Section Data]]                                                     | 1995 |      | Downloaded | Yes  |
+|            | A        |          | Causality related                                                                                                                  |      |      |            |      |
+| Thechnical | C        | SKIM     | [[https://www.sciencedirect.com/science/article/abs/pii/S0264999312000491][Dumitrescu and Hurlin - Testing for Granger non-causality in heterogeneous panels]]                                                  | 2012 |      | Filed      | Wait |
+|            | A        |          | Time series panel related (long panel)                                                                                             |      |      |            |      |
+|            | B        |          | Manual                                                                                                                             |      |      |            |      |
+| Manual     | A        | READ     | [[https://www.statalist.org/forums/filedata/fetch?id=1464882][Labra and Torrecillas - Estimating dynamic Panel data. A practical approach to perform long panels]]                                 | 2018 |      | Filed      | Wait |
+| Thechnical | C        | SKIM     | [[https://arxiv.org/abs/1709.08980][Fernández-Val and Weidner - Fixed Effect Estimation of Large T Panel Data Models]]                                                   | 2018 |      | Downloaded | Yes  |
+|            | B        |          | Unit root test                                                                                                                     |      |      |            |      |
+| Review     | B        | READ     | [[https://onlinelibrary.wiley.com/doi/abs/10.1111/1468-0084.0610s1631][Maddala and Wu - A Comparative Study of Unit Root Tests with Panel Data and a New Simple Test]]                                      | 1999 |      | Filed      | Yes  |
+|            | A        |          | Housing and House Prices                                                                                                           |      |      |            |      |
+| Empirical  | A        | READ     | [[https://www.ecb.europa.eu/pub/pdf/scpwps/ecbwp888.pdf?ec420f6e04a07efadb15fbbd5d4223e6][Goodhart and Hofmann -  House prices, money, credit and the macroeconomy]]                                                           | 2008 |      | Filed      | Yes  |
+|            | A        |          | Software                                                                                                                           |      |      |            |      |
+| Review     | C        | PARTIAL  | [[https://link.springer.com/chapter/10.1007/978-3-540-75892-1_26][Blanchard - Software Review]]                                                                                                        | 2008 |      | Filed      | Wait |
+| Manual     | B        | PARTIAL  | [[https://www.stata.com/manuals13/xt.pdf][Stata 13 XT]]                                                                                                                        | 2013 |      | Filed      | No   |
+|            | B        |          | References                                                                                                                         |      |      |            |      |
 #+END
 
-* House Prices
+** Hypothesis testing survey
+
+
+| Author(s)                   | Type                        | Null Hypothesis | Description                                           | Comments                      | For tsPanel? |
+|-----------------------------+-----------------------------+-----------------+-------------------------------------------------------+-------------------------------+--------------|
+| Im et al. (2003)            | Unit root                   |                 | For heterogeneous panel                                | Also known as IPS test        |              |
+| Pesaran and Hashem (2000)   | Unit root                   |                 |                                                       |                               |              |
+| Swamy (1970)                | Cross-section heterogeneity |                 |                                                       |                               |              |
+| Pesaran and Yamagata (2008) | Cross-section heterogeneity |                 |                                                       |                               |              |
+| Breusch and Pagan (1980)    | Cross-section dependence    |                 | Lagrange multiplier cross-sectional dependence test   |                               |              |
+| Pesaran (2004)              | Cross-section dependence    |                 | Cross-sectionally augmented Dickey-Fuller (CADF) test |                               |              |
+| Pesaran (2007)              | Cross-section dependence    |                 |                                                       |                               |              |
+| Pesaran et al (2008)        | Cross-section dependence    |                 |                                                       |                               |              |
+| Pedroni (2004)              | Co-integration              |                 |                                                       | It controls for heterogeneity |              |
+| Judson and Owen (1999)      | Model specification         |                 |                                                       |                               |              |
+| Pedroni and Peter (2000)    | Model specification         |                 | Proposes FMOLS                                        |                               |              |
+| Hausman                     | Exogeneity                  |                 |                                                       |                               |              |
+| Canning and Pedroni (2008)  | Causality                   |                 | Heterogeneous panel causality test                    |                               |              |
+| Sargan                      |                             |                 |                                                       |                               |              |
+
+
+* [#A] Books
+
+** READ [#A] [[https://www.emerald.com/insight/publication/doi/10.1016/S0731-9053(2001)15][Baltagi - Nonstationary Panels, Panel Cointegration, and Dynamic Panels: Volume 15]]
+   :PROPERTIES:
+   :YEAR:     2000
+   :ZOTERO:   Yes
+   :TYPE:     Manual
+   :STATUS:   Downloaded
+   :RELEVANCE: High
+   :IMPACT:   High
+   :CITE:     Yes
+   :END:    
+*** SKIM [#A] [[https://www.emerald.com/insight/content/doi/10.1016/S0731-9053(00)15002-9/full/html][Baltagi and Kao - Nonstationary panels, cointegration in panels and dynamic panels: A survey]]
+   :PROPERTIES:
+   :YEAR:     2000
+   :ZOTERO:   Yes
+   :TYPE:     Review
+   :STATUS:   Downloaded
+   :RELEVANCE: High
+   :IMPACT:   Regular
+   :CITE:     Yes
+   :END:    
+#+BEGIN_SRC bibtex
+@Article{Baltagi_survey_2000,
+  author       = {Baltagi, Badi H. and Kao, Chihwa},
+  year         = {2000},
+  title	       = {Nonstationary panels, cointegration in panels and dynamic panels: A survey},
+  pages	       = {7–51},
+  doi	       = {10.1016/s0731-9053(00)15002-9},
+  url	       = {http://dx.doi.org/10.1016/S0731-9053(00)15002-9},
+  journal      = {Nonstationary Panels, Panel Cointegration, and Dynamic Panels},
+  publisher    = {Emerald (MCB UP )}
+}
+
+#+END_SRC
+
+*** MAYBE [#C] [[https://www.emerald.com/insight/content/doi/10.1016/S0731-9053(00)15003-0/full/html][Blundel et al - Estimation in dynamic panel data models: Improving on the performance of the standard GMM estimator]]
+   :PROPERTIES:
+   :YEAR:     2000
+   :ZOTERO:   Yes
+   :TYPE:     Thechnical
+   :STATUS:   Downloaded
+   :RELEVANCE: Low
+   :IMPACT:   Regular
+   :CITE:     Wait
+   :END:    
+
+#+BEGIN_SRC bibtex
+@Article{Blundell,
+  author       = {Blundell, Richard and Bond, Stephen and Windmeijer, Frank},
+  year         = {2000},
+  title	       = {Estimation in dynamic panel data models: Improving on the performance of the standard GMM estimator},
+  pages	       = {53–91},
+  issn	       = {0731-9053},
+  doi	       = {10.1016/s0731-9053(00)15003-0},
+  url	       = {http://dx.doi.org/10.1016/S0731-9053(00)15003-0},
+  journal      = {Nonstationary Panels, Panel Cointegration, and Dynamic Panels},
+  publisher    = {Emerald (MCB UP )}
+}
+#+END_SRC
+
+*** WAIT [#A] [[https://www.emerald.com/insight/content/doi/10.1016/S0731-9053(00)15004-2/full/html][Pedroni - Fully modified OLS for heterogeneous cointegrated panels]]
+   :PROPERTIES:
+   :YEAR:     2001
+   :ZOTERO:   Entry
+   :TYPE:     Thechnical
+   :STATUS:   Filed
+   :RELEVANCE: Regular
+   :IMPACT:   High
+   :CITE:     Yes
+   :END:    
+
+#+BEGIN_SRC bibtex
+@Article{Pedroni_FMOLS_2001,
+  author       = {Pedroni, Peter},
+  year         = {2001},
+  title	       = {Fully modified OLS for heterogeneous cointegrated panels},
+  pages	       = {93–130},
+  doi	       = {10.1016/s0731-9053(00)15004-2},
+  url	       = {http://dx.doi.org/10.1016/S0731-9053(00)15004-2},
+  journal      = {Nonstationary Panels, Panel Cointegration, and Dynamic Panels},
+  publisher    = {Emerald (MCB UP)}
+}
+#+END_SRC
+
+*** SKIM [#B] [[https://www.emerald.com/insight/content/doi/10.1016/S0731-9053(00)15007-8/full/html][Kao and Chiang - On the estimation and inference of a cointegrated regression in panel data]]
+   :PROPERTIES:
+   :YEAR:     2001
+   :ZOTERO:   Entry
+   :TYPE:     Thechnical
+   :STATUS:   Filed
+   :RELEVANCE: Regular
+   :IMPACT:   Regular
+   :CITE:     Wait
+   :END:    
+#+BEGIN_SRC bibtex
+@Article{Kao_Inference_2001,
+  author       = {Kao, Chihwa and Chiang, Min-Hsien},
+  year         = {2001},
+  title	       = {On the estimation and inference of a cointegrated regression in panel data},
+  pages	       = {179–222},
+  doi	       = {10.1016/s0731-9053(00)15007-8},
+  url	       = {http://dx.doi.org/10.1016/S0731-9053(00)15007-8},
+  journal      = {Nonstationary Panels, Panel Cointegration, and Dynamic Panels},
+  publisher    = {Emerald (MCB UP)}
+}
+#+END_SRC
+
+*** READ [#A] [[https://www.emerald.com/insight/content/doi/10.1016/S0731-9053(00)15008-X/full/html][Murray and Papell - Testing for unit roots in panels in the presence of structural change with an application to OECD unemployment]]
+   :PROPERTIES:
+   :YEAR:     2001
+   :ZOTERO:   Entry
+   :TYPE:     Case
+   :STATUS:   Filed
+   :RELEVANCE: Regular
+   :IMPACT:   Low
+   :CITE:     Wait
+   :END:    
+
+#+BEGIN_SRC bibtex
+@Article{Murray_URUN_2001,
+  author       = {Murray, Christian J. and Papell, David H.},
+  year         = {2001},
+  title	       = {Testing for unit roots in panels in the presence of structural change with an application to OECD unemployment},
+  pages	       = {223–238},
+  doi	       = {10.1016/s0731-9053(00)15008-x},
+  url	       = {http://dx.doi.org/10.1016/S0731-9053(00)15008-X},
+  journal      = {Nonstationary Panels, Panel Cointegration, and Dynamic Panels},
+  publisher    = {Emerald (MCB UP)}
+}
+#+END_SRC
+
+*** SKIM [#B] [[https://www.emerald.com/insight/content/doi/10.1016/S0731-9053(00)15010-8/full/html][Yin and Wu - Stationarity tests in heterogeneous panels]]
+   :PROPERTIES:
+   :YEAR:     2001
+   :ZOTERO:   Entry
+   :TYPE:     Thechnical
+   :STATUS:   Filed
+   :RELEVANCE: Regular
+   :IMPACT:   High
+   :CITE:     Yes
+   :END:    
+
+#+BEGIN_SRC bibtex
+@Article{Yin,
+  author       = {Yin, Yong and Wu, Shaowen},
+  year         = {2001},
+  title	       = {Stationarity tests in heterogeneous panels},
+  pages	       = {275–296},
+  doi	       = {10.1016/s0731-9053(00)15010-8},
+  url	       = {http://dx.doi.org/10.1016/S0731-9053(00)15010-8},
+  journal      = {Nonstationary Panels, Panel Cointegration, and Dynamic Panels},
+  publisher    = {Emerald (MCB UP)}
+}
+#+END_SRC
+
+
+** READ [#A] [[https://link.springer.com/book/10.1007/978-3-540-75892-1][Mátyás and Sevestre - The Econometrics of Panel Data: Vol 46]] 
+*** READ [#A] [[https://link.springer.com/chapter/10.1007/978-3-540-75892-1_9][Breitung and Pesaran - Unit Roots and Cointegration in Panels]]
+   :PROPERTIES:
+   :YEAR:     2008
+   :ZOTERO:   Yes
+   :TYPE:     Thechnical
+   :STATUS:   Filed
+   :RELEVANCE: High
+   :IMPACT:   Regular
+   :CITE:     Yes
+   :END:    
+#+BEGIN_SRC bibtex
+@Article{Breitung_URCointegration_2008,
+  author       = {Breitung, Jörg and Pesaran, M. Hashem},
+  title	       = {Unit Roots and Cointegration in Panels},
+  year         = {2008},
+  pages	       = {279–322},
+  doi	       = {10.1007/978-3-540-75892-1_9},
+  url	       = {http://dx.doi.org/10.1007/978-3-540-75892-1_9},
+  journal      = {The Econometrics of Panel Data},
+  publisher    = {Springer Berlin Heidelberg}
+}
+#+END_SRC
+
+*** READ [#A] [[https://link.springer.com/chapter/10.1007/978-3-540-75892-1_2][Balestra and Krishnakumar - Fixed Effects Models and Fixed Coefficients Models]]
+   :PROPERTIES:
+   :YEAR:     2008
+   :ZOTERO:   Yes
+   :TYPE:     Thechnical
+   :STATUS:   Downloaded
+   :RELEVANCE: High
+   :IMPACT:   Regular
+   :CITE:     Yes
+   :END:    
+#+BEGIN_SRC bibtex
+@Article{Balestra_Fixed_2008,
+  author       = {Balestra, Pietro and Krishnakumar, Jayalakshmi},
+  title	       = {Fixed Effects Models and Fixed Coefficients Models},
+  year	       = {2008},
+  pages	       = {23–48},
+  doi	       = {10.1007/978-3-540-75892-1_2},
+  url	       = {http://dx.doi.org/10.1007/978-3-540-75892-1_2},
+  journal      = {The Econometrics of Panel Data},
+  publisher    = {Springer Berlin Heidelberg}
+}
+#+END_SRC
+
+** READ [#A] [[https://link.springer.com/book/10.1007/978-3-540-75892-1][Baltagi and Bresson - The Econometrics of multi-dimensional Panels: Vol 50]] 
+*** SKIM [#A] [[https://link.springer.com/chapter/10.1007/978-3-319-60783-2_2][Balazsi, Baltagi, Matyas and Pus -  Random Effects Models]]
+   :PROPERTIES:
+   :YEAR:     2017
+   :ZOTERO:   Yes
+   :TYPE:     Thechnical
+   :STATUS:   Filed
+   :RELEVANCE: High
+   :IMPACT:   Regular
+   :CITE:     Yes
+   :END:    
+
+#+BEGIN_SRC bibtex
+@Article{Balazsi_Random_2017,
+  author       = {Balazsi, Laszlo and Baltagi, Badi H. and Matyas,
+                  Laszlo and Pus, Daria},
+  title	       = {Random Effects Models},
+  year	       = {2017},
+  pages	       = {35–69},
+  doi	       = {10.1007/978-3-319-60783-2_2},
+  url	       = {http://dx.doi.org/10.1007/978-3-319-60783-2_2},
+  journal      = {The Econometrics of Multi-dimensional Panels},
+  publisher    = {Springer International Publishing}
+}
+#+END_SRC
+
+*** SKIM [#A] [[https://link.springer.com/chapter/10.1007/978-3-319-60783-2_1][Balazsi, Laszlo and Wansbeek - Fixed Effects Models]]
+   :PROPERTIES:
+   :YEAR:     2017
+   :ZOTERO:   Entry
+   :TYPE:     Thechnical
+   :STATUS:   Filed
+   :RELEVANCE: Regular
+   :IMPACT:   Regular
+   :CITE:     Yes
+   :END:    
+#+BEGIN_SRC bibtex
+@Article{Balazsi_Fixed_2017,
+  author       = {Balazsi, Laszlo and Matyas, Laszlo and Wansbeek,
+                  Tom},
+  title	       = {Fixed Effects Models},
+  year	       = {2017},
+  pages	       = {1–34},
+  doi	       = {10.1007/978-3-319-60783-2_1},
+  url	       = {http://dx.doi.org/10.1007/978-3-319-60783-2_1},
+  journal      = {The Econometrics of Multi-dimensional Panels},
+  publisher    = {Springer International Publishing}
+}
+#+END_SRC
+
+*** READ [#A] [[https://link.springer.com/chapter/10.1007/978-3-319-60783-2_12][Baltagi and Bresson - Modelling Housing Using Multi-dimensional Panel Data]]
+   :PROPERTIES:
+   :YEAR:     2017
+   :ZOTERO:   Entry
+   :TYPE:     Case
+   :STATUS:   Filed
+   :RELEVANCE: High
+   :IMPACT:   Regular
+   :CITE:     Yes
+   :END:    
+
+#+BEGIN_SRC bibtex
+@Article{Baltagi_Mhousing_2017,
+  author       = {Baltagi, Badi H. and Bresson, Georges},
+  title	       = {Modelling Housing Using Multi-dimensional Panel Data},
+  year	       = 2017,
+  pages	       = {349–376},
+  doi	       = {10.1007/978-3-319-60783-2_12},
+  url	       = {http://dx.doi.org/10.1007/978-3-319-60783-2_12},
+  journal      = {The Econometrics of Multi-dimensional Panels},
+  publisher    = {Springer International Publishing}
+}
+#+END_SRC
+
+
+* [#A] Best practices
+
+** READ [#B] [[https://www.jstor.org/stable/2082979?seq=1][Beck and Katz - What to do (and not to do) with Time-Series Cross-Section Data]]
+   :PROPERTIES:
+   :YEAR:    1995
+   :ZOTERO:   Yes
+   :TYPE:     Review
+   :STATUS:   Downloaded
+   :RELEVANCE: Regular
+   :IMPACT:   Regular
+   :CITE:     Yes
+   :END:    
+
+#+BEGIN_SRC bibtex
+@Article{Beck_What_1995,
+  author       = {Beck, Nathaniel and Katz, Jonathan N.},
+  title	       = {What To Do (and Not to Do) with Time-Series Cross-Section Data},
+  year	       = {1995},
+  volume       = {89},
+  number       = {3},
+  month	       = {Sep},
+  pages	       = {634–647},
+  doi	       = {10.2307/2082979},
+  url	       = {http://dx.doi.org/10.2307/2082979},
+  journal      = {American Political Science Review},
+  publisher    = {Cambridge University Press (CUP)}
+}
+#+END_SRC
+
+
+* [#A] Causality related
+
+** SKIM [#C] [[https://www.sciencedirect.com/science/article/abs/pii/S0264999312000491][Dumitrescu and Hurlin - Testing for Granger non-causality in heterogeneous panels]]
+   :PROPERTIES:
+   :YEAR:     2012
+   :ZOTERO:   Yes
+   :TYPE:     Thechnical
+   :STATUS:   Filed
+   :RELEVANCE: Regular
+   :IMPACT:   Low
+   :CITE:     Wait
+   :END:    
+
+#+BEGIN_SRC bibtex
+@Article{Dumitrescu_Granger_2012,
+  author       = {Dumitrescu, Elena-Ivona and Hurlin, Christophe},
+  title	       = {Testing for Granger non-causality in heterogeneous panels},
+  year	       = {2012},
+  volume       = {29},
+  number       = {4},
+  month	       = {Jul},
+  pages	       = {1450–1460},
+  doi	       = {10.1016/j.econmod.2012.02.014},
+  url	       = {http://dx.doi.org/10.1016/j.econmod.2012.02.014},
+  journal      = {Economic Modelling},
+  publisher    = {Elsevier BV}
+}
+#+END_SRC
+
+* [#A] Time series panel related (long panel)
+** Manual
+*** READ [#A] [[https://www.statalist.org/forums/filedata/fetch?id=1464882][Labra and Torrecillas - Estimating dynamic Panel data. A practical approach to perform long panels]]
+   :PROPERTIES:
+   :YEAR:     2018
+   :ZOTERO:   Yes
+   :TYPE:     Manual
+   :STATUS:   Filed
+   :RELEVANCE: High
+   :IMPACT:   Low
+   :CITE:     Wait
+   :END:    
+#+BEGIN_SRC bibtex
+@Article{Labra_Lillo_2018,
+  author       = {Labra Lillo, Romilio and Torrecillas, Celia},
+  title	       = {Estimating dynamic Panel data. A practical approach to perform long panels.},
+  year	       = {2018},
+  volume       = {41},
+  number       = {1},
+  month	       = {Jan},
+  pages	       = {31–52},
+  issn	       = {0120-1751},
+  doi	       = {10.15446/rce.v41n1.61885},
+  url	       = {http://dx.doi.org/10.15446/rce.v41n1.61885},
+  journal      = {Revista Colombiana de Estadística},
+  publisher    = {Universidad Nacional de Colombia}
+}
+#+END_SRC
+
+*** SKIM [#C] [[https://arxiv.org/abs/1709.08980][Fernández-Val and Weidner - Fixed Effect Estimation of Large T Panel Data Models]]
+   :PROPERTIES:
+   :YEAR:     2018
+   :ZOTERO:   Yes
+   :TYPE:     Thechnical
+   :STATUS:   Downloaded
+   :RELEVANCE: High
+   :IMPACT:   Low
+   :CITE:     Yes
+   :END:    
+** Unit root test
+*** READ [#B] [[https://onlinelibrary.wiley.com/doi/abs/10.1111/1468-0084.0610s1631][Maddala and Wu - A Comparative Study of Unit Root Tests with Panel Data and a New Simple Test]]
+   :PROPERTIES:
+   :YEAR:     1999
+   :ZOTERO:   Yes
+   :TYPE:     Review
+   :STATUS:   Filed
+   :RELEVANCE: High
+   :IMPACT:   High
+   :CITE:     Yes
+   :END:    
+#+BEGIN_SRC bibtex
+@Article{Maddala_UR_1999,
+  author       = {Maddala, G. S. and Wu, Shaowen},
+  title	       = {A Comparative Study of Unit Root Tests with Panel Data and a New Simple Test},
+  year	       = {1999},
+  volume       = {61},
+  number       = {S1},
+  month	       = {Nov},
+  pages	       = {631–652},
+  doi	       = {10.1111/1468-0084.0610s1631},
+  url	       = {http://dx.doi.org/10.1111/1468-0084.0610s1631},
+  journal      = {Oxford Bulletin of Economics and Statistics},
+  publisher    = {Wiley}
+}
+#+END_SRC
+
+
+* [#A] Housing and House Prices
 
 ** READ [#A] [[https://www.ecb.europa.eu/pub/pdf/scpwps/ecbwp888.pdf?ec420f6e04a07efadb15fbbd5d4223e6][Goodhart and Hofmann -  House prices, money, credit and the macroeconomy]]
    :PROPERTIES:
@@ -50,3 +514,48 @@
    :IMPACT:   Regular
    :CITE:     Yes
    :END:    
+   
+
+
+* [#A] Software
+
+** PARTIAL [#C] [[https://link.springer.com/chapter/10.1007/978-3-540-75892-1_26][Blanchard - Software Review]]
+   :PROPERTIES:
+   :YEAR:     2008
+   :ZOTERO:   Yes
+   :TYPE:     Review
+   :STATUS:   Filed
+   :RELEVANCE: Low
+   :IMPACT:   Low
+   :CITE:     Wait
+   :END:    
+
+#+BEGIN_SRC bibtex
+@Article{Blanchard,
+  author       = {Blanchard, Pierre},
+  title	       = {Software Review},
+  pages	       = {907–950},
+  doi	       = {10.1007/978-3-540-75892-1_26},
+  url	       = {http://dx.doi.org/10.1007/978-3-540-75892-1_26},
+  isbn	       = 9783540758921,
+  journal      = {The Econometrics of Panel Data},
+  publisher    = {Springer Berlin Heidelberg}
+}
+
+
+#+END_SRC
+
+** PARTIAL [#B] [[https://www.stata.com/manuals13/xt.pdf][Stata 13 XT]]
+   :PROPERTIES:
+   :YEAR:     2013
+   :ZOTERO:   No
+   :TYPE:     Manual
+   :STATUS:   Filed
+   :RELEVANCE: Regular
+   :IMPACT:   Low
+   :CITE:     No
+   :END:    
+
+* References                                                         :ignore:
+
+bibliography:Panel.bib
